[package]
name = "rsprocmaps"
version = "0.3.1"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
description = "A Rust library for handling memory maps in procfs"
repository = "https://github.com/woodruffw/procmaps.rs"
documentation = "https://docs.rs/rsprocmaps/"
readme = "README.md"
license = "MIT"
keywords = ["procfs", "linux", "memory-maps"]
categories = ["os", "os::unix-apis", "parser-implementations"]

[package.metadata.release]
dev-version = false
publish = false # handled by GitHub Actions
push = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
libc = "0.2"
pest = "2.1"
pest_derive = "2.1"
phf = { version = "0.10.1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
glob = "0.3"
